--- a/app/src/main/res/layout/activity_category_list_details.xml
+++ b/app/src/main/res/layout/activity_category_list_details.xml
@@ -42,14 +42,15 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginRight="15dp">
 
-                <TextView
+                <com.sa.rezq.view.AppTextView_Title
                     android:id="@+id/TvPlaces"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/popular_places"
-                    android:textColor="#2B2626"
-                    android:textSize="14dp"
-                    android:textStyle="bold" />
+                    android:textColor="@color/app_fontBlackColor"
+                    android:textAppearance="@style/MediumText"
+                    android:textStyle="bold"
+                    />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerPlaces"
