--- a/app/src/main/res/layout/activity_category_recyclerview_data.xml
+++ b/app/src/main/res/layout/activity_category_recyclerview_data.xml
@@ -9,7 +9,6 @@
     <androidx.cardview.widget.CardView
         android:layout_width="110dp"
         android:layout_height="wrap_content"
-        android:layout_margin="3dp"
         android:background="@color/white"
         app:cardCornerRadius="5dp">
 
@@ -32,6 +31,7 @@
                 android:text=""
                 android:textAllCaps="true"
                 android:textColor="@color/black"
+                android:textStyle="bold"
                 android:textSize="15dp" />
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -43,14 +43,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textColor="@color/black"
+                    android:textColor="@color/app_grey_text"
                     android:textSize="13dp" />
                 <com.sa.rezq.view.AppTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/places"
                     android:layout_marginLeft="4dp"
-                    android:textColor="@color/black"
+                    android:textColor="@color/app_grey_text"
                     android:textSize="13dp" />
             </LinearLayout>
 
