--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_centerInParent="true"
-                android:src="@drawable/ic_welcome" />
+                android:src="@drawable/rezq_logo" />
 
             <com.sa.rezq.view.AppTextView
                 android:id="@+id/textwel"
@@ -60,7 +60,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="48dp"
                     android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/_2sdp"
                     android:gravity="center"
                     app:ccp_autoDetectCountry="true"
                     app:ccp_autoDetectLanguage="true"
