--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -66,13 +66,14 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="36dp"
                     android:layout_marginTop="44dp"
+                    android:layout_marginRight="@dimen/_15sdp"
                     android:orientation="vertical">
 
 
 
                     <LinearLayout
                         android:id="@+id/fname"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
 
@@ -85,7 +86,7 @@
 
                         <com.sa.rezq.view.AppTextView
                             android:id="@+id/tv_firstname"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
                             android:text=""
@@ -96,7 +97,7 @@
                     </LinearLayout>
                 <LinearLayout
                     android:id="@+id/lname"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:layout_below="@+id/fname"
@@ -111,7 +112,7 @@
 
                     <com.sa.rezq.view.AppTextView
                         android:id="@+id/tv_lastName"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
                         android:text=""
@@ -124,7 +125,7 @@
 
                 <LinearLayout
                     android:id="@+id/mblno"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/lname"
                     android:layout_marginTop="20dp"
@@ -139,7 +140,7 @@
 
                     <com.sa.rezq.view.AppTextView
                         android:id="@+id/tv_mobileNumber"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
                         android:text=""
@@ -151,7 +152,7 @@
 
                 <LinearLayout
                     android:id="@+id/email"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/mblno"
                     android:layout_marginTop="20dp"
@@ -166,7 +167,7 @@
 
                     <com.sa.rezq.view.AppTextView
                         android:id="@+id/tv_emailId"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
                         android:text=""
