--- a/app/src/main/res/layout/activity_wishlist_single_data.xml
+++ b/app/src/main/res/layout/activity_wishlist_single_data.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
+    android:layout_margin="@dimen/_5sdp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <RelativeLayout
         android:id="@+id/fav_click_item"
@@ -12,7 +12,6 @@
             android:layout_height="170dp"
             android:id="@+id/cardItem"
             app:cardCornerRadius="8dp"
-            android:layout_marginLeft="10dp"
             android:layout_width="158dp">
             <RelativeLayout
                 android:layout_width="match_parent"
