--- a/app/src/main/res/layout/nav_header_main1.xml
+++ b/app/src/main/res/layout/nav_header_main1.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="190dp"
+    android:layout_height="180dp"
     android:id="@+id/llHeader">
     <View
         android:layout_width="match_parent"
@@ -44,12 +44,23 @@
                     android:singleLine="true"
                     android:textSize="15dp"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+                <com.sa.rezq.view.AppTextView
+                    android:id="@+id/tv_rezq_plus_member"
+                    android:layout_width="76dp"
+                    android:layout_height="20dp"
+                    android:text="@string/rezq_mem"
+                    android:gravity="center"
+                    android:visibility="gone"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="5dp"
+                    android:textSize="12dp"
+                    android:background="@color/colorPrimary"/>
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="5dp"
                     android:layout_height="wrap_content">
                     <com.sa.rezq.view.AppTextView
-                        android:id="@+id/tvmember"
+                        android:id="@+id/tv_free_membership"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/freemember"
@@ -67,26 +78,30 @@
                         android:layout_alignParentRight="true"/>
                 </RelativeLayout>
 
-                <com.sa.rezq.view.AppTextView
-                    android:layout_width="90dp"
-                    android:layout_height="32dp"
-                    android:text="@string/rezq_mem"
-                    android:gravity="center"
-                    android:visibility="gone"
-                    android:textColor="@color/white"
-                    android:textSize="12dp"
-                    android:layout_margin="5dp"
-                    android:background="@drawable/button_rezq"/>
-                <com.sa.rezq.view.AppTextView
-                    android:layout_marginTop="5dp"
-                    android:layout_width="wrap_content"
-                    android:textSize="12dp"
-                    android:visibility="gone"
-                    android:layout_marginLeft="10dp"
-                    android:textColor="#171717"
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/from_to"/>
+                    android:orientation="horizontal">
+                    <com.sa.rezq.view.AppTextView
+                        android:id="@+id/tv_validity_from"
+                        android:layout_width="wrap_content"
+                        android:textSize="12dp"
+                        android:textColor="#171717"
+                        android:layout_height="wrap_content"
+                        android:text=""/>
+                    <com.sa.rezq.view.AppTextView
+                        android:id="@+id/tv_validity_to"
+                        android:layout_width="wrap_content"
+                        android:textSize="12dp"
+                        android:layout_marginLeft="4dp"
+                        android:textColor="#171717"
+                        android:layout_height="wrap_content"
+                        android:text=""/>
+                </LinearLayout>
+
                 <com.sa.rezq.view.AppTextView
+                    android:id="@+id/tv_upgrade"
                     android:layout_width="90dp"
                     android:layout_height="32dp"
                     android:background="@drawable/button_border"
@@ -94,7 +109,6 @@
                     android:gravity="center"
                     android:textAllCaps="true"
                     android:textSize="12dp"
-                    android:layout_marginTop="10dp"
                     android:text="@string/upgrade"/>
 
             </LinearLayout>
