--- a/app/src/main/res/layout/popular_places_recyclerview_data.xml
+++ b/app/src/main/res/layout/popular_places_recyclerview_data.xml
@@ -15,6 +15,7 @@
             android:id="@+id/product_image"
             android:layout_width="wrap_content"
             android:layout_height="28dp"
+            android:layout_centerHorizontal="true"
             android:src="@drawable/image1" />
 
         <com.sa.rezq.view.AppTextView
@@ -22,6 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_below="@id/product_image"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:layout_marginTop="5dp"
             android:text="@string/pizza"
             android:textColor="@color/black"
@@ -29,6 +31,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_below="@id/product_title"
+            android:gravity="center"
             android:layout_height="wrap_content">
             <com.sa.rezq.view.AppTextView
                 android:layout_width="wrap_content"
