--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -64,7 +64,6 @@
                     android:drawablePadding="5dp"
                     android:textColor="@color/black"
                     android:textSize="14dp"
-                    android:textStyle="bold"
                     android:visibility="visible" />
                 <com.sa.rezq.view.AppTextView
                     android:id="@+id/tvHeaderText"
@@ -82,7 +81,7 @@
 
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/userProf"
+                android:id="@+id/iv_userProfile"
                 android:layout_width="42dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerInParent="true"
