--- a/app/src/main/res/layout/vendor_store_listdata.xml
+++ b/app/src/main/res/layout/vendor_store_listdata.xml
@@ -11,7 +11,7 @@
         android:orientation="horizontal">
 
         <LinearLayout
-            android:id="@+id/food"
+            android:id="@+id/image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp">
@@ -20,16 +20,14 @@
                 android:id="@+id/iv_vendor_logo"
                 android:layout_width="56dp"
                 android:layout_height="56dp"
-                android:layout_gravity="center"
                 android:src="@drawable/ic_group_al" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
-            android:layout_toRightOf="@+id/food"
-            android:gravity="center_vertical"
+            android:layout_marginLeft="@dimen/_15sdp"
+            android:layout_toRightOf="@+id/image"
             android:orientation="vertical">
 
             <com.sa.rezq.view.AppTextView
