--- a/app/src/main/res/values-night/dimens.xml
+++ b/app/src/main/res/values-night/dimens.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Default screen margins, per the Android Design guidelines. -->
 
     <dimen name="category_icon_size">40dp</dimen>
