--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,6 +25,8 @@
         <item>@color/colorAccent</item>
     </array>
     <color name="login_text">#2C2B2B</color>
+    <color name="app_background_color">#F5F5F5</color>
+    <color name="app_grey_text">#898989</color>
 
 
 
